# flan-t5-small-news-headline-0.1

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: demo.ipynb  news-headline-0.1-template.jinja  xp_20260309.ipynb
